--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,10 @@
 {
+  "scripts": {
+  "server": "nodemon app.js"
+},
   "dependencies": {
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7"
   }
 }
