--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,11 @@
     "server": "nodemon app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "validator": "^13.6.0"
   }
 }
