--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   }
 }
