--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "ag-grid-react": "^25.3.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
