--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
+    "react-search-field": "^1.2.1",
     "react-tabs": "^3.2.2",
     "web-vitals": "^1.0.1"
   },
