--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-papaparse": "^3.16.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
